amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexsistent-extension-union.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexsistent-extension-union.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'SearchResult'
  Severity: Violation
  Target: null/nullwrapper/unresolved
  Property: 
  Range: [(6,18)-(6,18)]
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexsistent-extension-union.api.graphql
